--- a/app/styles/components/_header-form.scss
+++ b/app/styles/components/_header-form.scss
@@ -3,6 +3,7 @@
     border: 0;
     border-bottom: 2px solid $gray;
     text-transform: uppercase;
+    padding-bottom: 4px;
     color: $gray-light;
     transition: all .2s ease;
 
